chore(whiteboard): align scss with partial conventions and avoid selector duplication

--- a/css/components/_whiteboard.scss
+++ b/css/components/_whiteboard.scss
@@ -33,12 +33,6 @@
     }
 }
 
-.excalidraw-wrapper {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
 /* Mobile responsiveness */
 @media (max-width: 500px) {
     .whiteboard-close-btn {
