--- a/css/modals/_whiteboard.scss
+++ b/css/modals/_whiteboard.scss
@@ -1,6 +1,7 @@
 .whiteboard {
 
     .excalidraw-wrapper {
+        position: relative;
         height: 100vh;
         width: 100vw;
     }
